# mcp_m365_security

./: .gitignore  CLAUDE_SETUP.md  README.md  main.py  pyproject.toml  requirements.txt
modules/: __init__.py  graph_client.py  security_assistant.py
tests/: test_purview_integration.py  test_smoke.py
